[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-tron"
version = "0.0.0" # Figure out version later
authors = [{ name = "NVIDIA", email = "nemo-toolkit@nvidia.com" }]
description = "Standalone packaging for the NeMo Tron sub-module."
readme = "README.md"
requires-python = ">=3.10"
# IMPORTANT: List the actual dependencies required by the 'tron' code here.
# This is just a placeholder list. You MUST replace it with the real dependencies.
dependencies = [
    "lightning",
    "wget",
    "onnx",
    "fiddle",
    "cloudpickle",
    "braceexpand",
    "webdataset",
    "h5py",
    "ijson",
    "matplotlib",
    "scikit-learn",
    "nemo-run",
    "hatchling",  # added for nemo-run, but idk if needed, try removing before finalizing
]

[tool.uv.sources]
nemo_run = { git = "https://github.com/NVIDIA/NeMo-Run", rev = "414f0077c648fde2c71bb1186e97ccbf96d6844c" }

[tool.setuptools]
packages = ["nemo"]