[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-tron"
version = "0.0.0" # Figure out version later
authors = [
  { name="Author Name", email="author@example.com" }, # <-- TODO: Fill in author details
]
description = "Standalone packaging for the NeMo Tron sub-module."
readme = "README.md" # <-- TODO: Recommend creating this file
requires-python = ">=3.8" # <-- TODO: Verify and adjust based on tron's requirements
# IMPORTANT: List the actual dependencies required by the 'tron' code here.
# This is just a placeholder list. You MUST replace it with the real dependencies.
dependencies = [
    "lightning",
]

# Optional dependencies can be defined like this:
# [project.optional-dependencies]
# dev = ["pytest", "flake8"]


[tool.setuptools]
packages = [
  "nemo.tron",
  "nemo.collections.llm.gpt.model",
]

# …and where their code lives on disk.
[tool.setuptools.package-dir]
"nemo.tron"                         = "tron"
"nemo.collections.llm.gpt.model"    = "collections/llm/gpt/model"